--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-# Python version (adjust if needed)
-python_version >= "3.10"
-
-# Web app
-streamlit>=1.33,<2
-
-# Data & math
-pandas>=2.2,<3
-numpy>=1.26,<3
-
-# Modeling
-scikit-learn>=1.4,<2
-
-# Visualization
-matplotlib>=3.8,<4
-seaborn>=0.13,<0.14
-optuna
+numpy==1.26.4
+pandas==2.2.2
+scipy==1.11.4
+scikit-learn==1.4.2
+statsmodels==0.14.1
+matplotlib==3.8.4
+streamlit==1.36.0
