--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ numpy==1.26.4
 pandas==2.2.2
 scipy==1.11.4
 scikit-learn==1.4.2
-statsmodels==0.14.1
-patsy==0.5.6
 matplotlib==3.8.4
 streamlit==1.36.0
+patsy==0.5.6
+statsmodels==0.14.1; python_version < "3.13"
