--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.26.4
-pandas==2.2.2
-scipy==1.11.4
-scikit-learn==1.4.2
-matplotlib==3.8.4
-streamlit==1.36.0
+numpy
+pandas
+scipy
+scikit-learn
+matplotlib
+streamlit
